# LibreSprite

./: CMakeLists.txt  INSTALL.md
.github/workflows/: cmakeAndroid.yml
data/: pref.xml
data/skins/default/: skin.xml
data/widgets/: home_view.xml
docs/licenses/: V8-LICENSE.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/commands/: cmd_run_script.cpp
src/app/script/: app_scripting.cpp
src/app/script/api/: app_script.cpp  dialog_script.cpp  palettelistbox_script.cpp  sprite_script.cpp  storage_script.cpp
src/app/ui/: home_view.cpp  home_view.h
src/base/: injection.h
src/script/: CMakeLists.txt  engine.h  script_object.h  value.h
src/script/duktape/: engine.cpp
src/script/lua/: engine.cpp
src/script/v8/: engine.cpp
src/ui/: int_entry.h  widget.cpp  window.cpp
